# rust_app

./: .env  .gitignore  Cargo.toml  README.md  proejctDB.db
assets/: index.html
entity/: Cargo.toml
entity/src/: user.rs
frontend/: bun.lockb  index.html  package.json
frontend/src/: main.js
frontend/src/components/: NavBar.vue
frontend/src/router/: index.js
frontend/src/views/: HomeView.vue
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/handler/: auth_handlers.rs  user_handlers.rs
src/models/: mod.rs  user_models.rs  webpage_models.rs
src/routes/: auth_routes.rs  user_routes.rs
src/utils/: consts.rs  jwt.rs  mod.rs
templates/: base.html  index.html  main.js  router.js
