[package]
name = "axum_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "frontend", "migration"]

[dependencies]
axum = { version = "0.7.3", features = ["multipart"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
tracing-subscriber = "0.3.18"
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-async-std-rustls", "macros" ] }
uuid = { version = "1.6.1", features = ["v4"] }
entity = { path = "entity" }
migration = {path = "migration"}
dotenv = "0.15.0"
lazy_static = "1.4.0"
askama = "0.12.1"
jsonwebtoken = "9"
bcrypt = "0.15.0"
